<package>
  <name>cob_collision_velocity_filter</name>
  <version>0.5.3</version>
  <description>The cob_collision_velocity_filter package is a package for collision avoidance using teleoperation.</description>
 
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_collision_velocity_filter</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
  <author>Matthias Gruhler</author>
  <author>Michal Spanel (spanel@fit.vutbr.cz</author>
  <author>vel. limited marker)</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cob_footprint_observer</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cob_footprint_observer</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>move_base_msgs</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>cob_footprint_observer</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->

  <export>

  </export>
</package>