<package format="2">
  <name>cob_driver</name>
  <version>0.7.16</version>
  <description>The cob_driver stack includes packages that provide access to the Care-O-bot hardware through ROS messages, services and actions. E.g. for mobile base, arm, camera sensors, laser scanners, etc...</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_base_drive_chain</exec_depend>
  <exec_depend>cob_bms_driver</exec_depend>
  <exec_depend>cob_canopen_motor</exec_depend>
  <exec_depend>cob_elmo_homing</exec_depend>
  <exec_depend>cob_generic_can</exec_depend>
  <exec_depend>cob_light</exec_depend>
  <exec_depend>cob_mimic</exec_depend>
  <exec_depend>cob_phidgets</exec_depend>
  <exec_depend>cob_relayboard</exec_depend>
  <exec_depend>cob_scan_unifier</exec_depend>
  <exec_depend>cob_sick_lms1xx</exec_depend>
  <exec_depend>cob_sick_s300</exec_depend>
  <exec_depend>cob_sound</exec_depend>
  <exec_depend>cob_undercarriage_ctrl</exec_depend>
  <exec_depend>cob_utilities</exec_depend>
  <exec_depend>cob_voltage_control</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
