<?xml version="1.0"?>
<package format="2">
  <name>cob_elmo_homing</name>
  <version>0.7.15</version>
  <description>This packagae implements the special homing procedure that is needed for old cob4/raw bases</description>

  <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>canopen_402</depend>
  <depend>pluginlib</depend>
  <depend>socketcan_interface</depend>

  <export>
     <canopen_402 plugin="${prefix}/canopen_402_plugin.xml" />
  </export>
</package>
