<package>
  <name>cob_footprint_observer</name>
  <version>0.5.3</version>
  <description>The cob_footprint_observer package adjusts the footprint of the robot based on the setup (e.g. arm and/or tray).</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_footprint_observer</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer> 
  <author>Matthias Gruhler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

  <export>

  </export>
</package>
