<package>
  <name>cob_generic_can</name>
  <version>0.5.3</version>
  <description>The package cob_generic_can provides an interface for nodes on a can-bus and examplary wrappers for two PeakSys-can-libs. When a can-bus-device is generated (for an example see base_dirve_chain) you can use generic_can to create as many itfs as there will be components communicating via this can-bus. Assign type of the can communication device (e.g. usb-to-can or can-card of a specific vendor) and can-address of the target device. This package comes with wrappers for PeakSys and PeakSysUSB adapters.</description>
  

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_generic_can</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
  <author>Christian Connette</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cob_utilities</build_depend>
  <build_depend>libpcan</build_depend>
  <build_depend>libntcan</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cob_utilities</run_depend>
  <run_depend>libpcan</run_depend>
  <run_depend>libntcan</run_depend>
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>cob_utilities</test_depend> -->
  <!-- <test_depend>libpcan</test_depend> -->
  <!-- <test_depend>libntcan</test_depend> -->

  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/common/lib -L${prefix}/common/lib -lcob_generic_can_peaksysusb -lcob_generic_can_peaksys -lcob_generic_can_esd" cflags="-I${prefix}/common/include"/>
  </export>
</package>
