<package format="2">
  <name>cob_generic_can</name>
  <version>0.7.16</version>
  <description>The package cob_generic_can provides an interface for nodes on a can-bus and examplary wrappers for two PeakSys-can-libs. When a can-bus-device is generated (for an example see base_dirve_chain) you can use generic_can to create as many itfs as there will be components communicating via this can-bus. Assign type of the can communication device (e.g. usb-to-can or can-card of a specific vendor) and can-address of the target device. This package comes with wrappers for PeakSys and PeakSysUSB adapters.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_generic_can</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
  <author>Christian Connette</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cob_utilities</depend>
  <depend>libntcan</depend>
  <depend>libpcan</depend>
  <depend>socketcan_interface</depend>
</package>
