<package>
  <name>cob_head_axis</name>
  <version>0.6.3</version>
  <description>cob_head_axis</description>
  

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_head_axis</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
  <author>Ulrich Reiser</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cob_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cob_generic_can</build_depend>
  <build_depend>cob_canopen_motor</build_depend>
  <build_depend>cob_utilities</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>libntcan</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>control_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>cob_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>cob_generic_can</run_depend>
  <run_depend>cob_canopen_motor</run_depend>
  <run_depend>cob_utilities</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>libntcan</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>control_msgs</run_depend>


  <export>

  </export>
</package>
