<package format="2">
  <name>cob_head_axis</name>
  <version>0.6.6</version>
  <description>cob_head_axis</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_head_axis</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
  <author>Ulrich Reiser</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>cob_canopen_motor</depend>
  <depend>cob_generic_can</depend>
  <depend>cob_srvs</depend>
  <depend>cob_utilities</depend>
  <depend>control_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>urdf</depend>

  <exec_depend>rospy</exec_depend>

</package>
