<package>
  <name>cob_hokuyo</name>
  <version>0.5.0</version>
  <description>This Package is simply a Care-O-bot specific setup for the hokuyo scanner.</description>
  
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_hokuyo</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>

  <author>Florian Weisshardt</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>hokuyo_node</run_depend>
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rostest</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>hokuyo_node</test_depend> -->

  <export>

  </export>
</package>
