<package>
  <name>cob_hwboard</name>
  <version>0.5.0</version>
  <description>cob_hwboard</description>
  
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_hwboard</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="uhr-eh@ipa.fhg.de">Eduard Herkel</maintainer>
  <author>Eduard Herkel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->

  <export>

  </export>
</package>